<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    tools:context=".activity.TimeSlotActivity">

    <LinearLayout
        android:id="@+id/lvl_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightblue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/address"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_green"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="Home"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:text="fjhd"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_change"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/change"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/timetitle"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvl_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvl_continue"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="3dp"

            android:gravity="center"
            android:padding="3dp">

            <TextView
                android:id="@+id/txt_totle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="$ 10"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_proceed"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/proceed_to_pay"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvl_ordersucess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ordersuccss" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/title1"
            android:gravity="center"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="12dp"
            android:text="@string/title2"

            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/txt_complet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/track"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>