<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18dp"
                android:text="@string/introtext"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:textSize="14dp"
                android:text="@string/introtext1"
                android:textColor="@color/black" />

            <View
                android:layout_width="10dp"
                android:layout_height="15dp" />

            <com.merhold.extensiblepageindicator.ExtensiblePageIndicator
                android:id="@+id/flexibleIndicator"
                android:layout_width="150dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                app:indicatorActiveColor="@color/colorPrimary"
                app:indicatorInactiveColor="@color/colorGray"
                app:indicatorPadding="10dp"
                app:indicatorRadius="6dp" />


        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="30dp" />

    </LinearLayout>


</RelativeLayout>